--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -311,6 +311,8 @@ label{
     padding-top: 130px;
     padding-bottom: 30px;
     display: none;
+    text-align: center;
+     font-family: 'Anton', sans-serif;;
     
 }
   
